# rustweb-benchmark

./: .gitignore  utils.sh
actix-demo/: Cargo.toml
actix-demo/src/: main.rs  main.rs.bak
axum-demo/: Cargo.toml
axum-demo/src/: main.rs  main.rs.bak
salvo-demo/: Cargo.toml  build.sh  demo-salvo
salvo-demo/src/: main.rs  main.rs.bak
salvo-demo/src/config/: init.rs  init.rs.bak  mod.rs  mod.rs.bak  mysql.rs  redis.rs  router.rs
salvo-demo/src/controller/: users_controller.rs  video_controller.rs
salvo-demo/src/mapper/: users_mapper.rs
salvo-demo/src/pojo/: users.rs
salvo-demo/src/services/: mod.rs  users_service.rs  video_service.rs
salvo-demo/src/services/impl/: mod.rs  users_service_impl.rs  video_service_impl.rs
spring-rs-demo/: Cargo.toml  build.sh
spring-rs-demo/config/: app.toml
spring-rs-demo/src/: main.rs
