[package]
name = "actix-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
mimalloc = "0.1.43"
tokio = { version = "1.40.0", features = ["full"] }

[profile.dev]
overflow-checks = false
strip = true

[profile.release]
overflow-checks = false
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
incremental = false

