[package]
name = "axum-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
mimalloc = "0.1.43"
tokio = { version = "1.40.0", features = ["full"] }
actix-web = "4"

[profile.release]
overflow-checks = false
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
debug = 0
debug-assertions = false
panic = "abort"
incremental = false